data/derived/fa15/progs/unify/prog0185.ml.out
Characters 33-73:
  n = n mod 10 + additivePersistence(n/10);;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
